--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -4,6 +4,7 @@
         <title>Sample Node.js Application</title>
     </head>
     <body>
+<script src="//code.tidio.co/tgllqes86fssnxh7ss3ycunq7aut3ykd.js" async></script>
     <span>Sample Node.js Application</span>
     </body>
 </html>
