--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -5,6 +5,7 @@
     </head>
     <body>
 <script src="//code.tidio.co/tgllqes86fssnxh7ss3ycunq7aut3ykd.js" async></script>
+<script src='https://www.noupe.com/embed/019a2eb0ce9c787ab0f339e78ad9c14f5f73.js'></script>
     <span>Sample Node.js Application</span>
     </body>
 </html>
