--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -4,8 +4,10 @@
         <title>Sample Node.js Application</title>
     </head>
     <body>
+<h1>Hello World! </h1>
 <script src="//code.tidio.co/tgllqes86fssnxh7ss3ycunq7aut3ykd.js" async></script>
 <script src='https://www.noupe.com/embed/019a2eb0ce9c787ab0f339e78ad9c14f5f73.js'></script>
-    <span>Sample Node.js Application</span>
+<script src='//in.fw-cdn.com/32621700/1456808.js' chat='true'> </script>
+    <span>Sample Node.js Application Test</span>
     </body>
 </html>
