--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -4,6 +4,15 @@
         <title>Sample Node.js Application</title>
     </head>
     <body>
+
+<script src="https://wchat.freshchat.com/js/widget.js"></script>
+<script>
+  window.fcWidget.init({
+    token: "8tKKfIsKVi8NypRcRf8FP/HPV3t7sliMk4XZtxqur1c=",
+    host: "https://wchat.freshchat.com"
+  });
+</script>
+
 <h1>Hello World! </h1>
 <script src="//code.tidio.co/tgllqes86fssnxh7ss3ycunq7aut3ykd.js" async></script>
 <script src='https://www.noupe.com/embed/019a2eb0ce9c787ab0f339e78ad9c14f5f73.js'></script>
